# Proiect3POO

./: Alien.cpp  Alien.h  AlienFactory.h  CMakeLists.txt  Constants.h  Entity.cpp  Entity.h  Exceptions.h  Game.cpp  Game.h  Laser.h  PowerUp.cpp  PowerUp.h  README.md  ResourceManager.h  Spaceship.cpp  Spaceship.h  main.cpp
