cmake_minimum_required(VERSION 3.28)
project(untitled LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

include(FetchContent)
FetchContent_Declare(SFML
        GIT_REPOSITORY https://github.com/SFML/SFML.git
        GIT_TAG 3.0.2
        GIT_SHALLOW ON
        EXCLUDE_FROM_ALL
        SYSTEM)
FetchContent_MakeAvailable(SFML)

add_executable(untitled main.cpp
        Game.cpp
        Game.h
        Constants.h
        Spaceship.h
        Spaceship.cpp
        Entity.h
        Entity.cpp
        Laser.h
        Laser.cpp
        Alien.h
        Alien.cpp
        Exceptions.h
        PowerUp.h
        PowerUp.cpp
        ResourceManager.h
        AlienFactory.h)
target_compile_features(untitled PRIVATE cxx_std_17)
target_link_libraries(untitled PRIVATE SFML::Graphics)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT untitled)